log
Fri 05 May 2023 12:38:36 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:15: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   56 |         Node *aux =createNode();
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
c3f516d
Fri 05 May 2023 12:39:17 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
2673b05
Fri 05 May 2023 12:56:03 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  0|5
total_score: 0/70
9516bc5
Fri 05 May 2023 01:00:42 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘busqueda’:
sudoku.c:59:28: error: ‘j’ undeclared (first use in this function)
   59 |           if(nodo->sudo[i][j]== 0)
      |                            ^
sudoku.c:59:28: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
92cef96
Fri 05 May 2023 01:00:50 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b145c24
Fri 05 May 2023 01:03:28 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
164aa52
Fri 05 May 2023 01:04:58 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 5/70
eb5a78f
Fri 05 May 2023 01:07:32 PM UTC: 
 sudoku.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
f221d05
Fri 05 May 2023 01:08:22 PM UTC: 
 sudoku.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  1|5
total_score: 5/70
69ab5b0
Fri 05 May 2023 01:10:40 PM UTC: 
 sudoku.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
afcc110
Sat 06 May 2023 09:31:21 PM UTC: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  2|4
total_score: 15/70
baddba8
Sat 06 May 2023 09:32:32 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
45a669b
